--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,12 @@ body{
     position: absolute;
     bottom: 0;
     font-family: 'Share Tech Mono', monospace;
+    overflow-y: hidden;
+    padding: 10px;
 }
 
 #logger .message {
     width: 100%;
-    padding: 15px 5px;
-    height: 30px;
+    height: 25px;
     color: #fbfbfb;
 }
