--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,5 +20,18 @@ body{
 #logger .message {
     width: 100%;
     height: 25px;
+    line-height: 25px;
     color: #fbfbfb;
+    animation-name: fadeIn;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes fadeIn {
+    from {
+        background-color: #ffffff;
+    }
+    to {
+        background-color: inherit;
+    }
 }
