--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,14 @@ body{
     bottom: 0;
     font-family: 'Share Tech Mono', monospace;
     overflow-y: hidden;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 #logger .message {
     width: 100%;
     height: 25px;
     line-height: 25px;
+    padding: 0 10px;
     color: #fbfbfb;
     animation-name: fadeIn;
     animation-duration: .5s;
