--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ body{
     position: relative;
     height: 50px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    animation: slideDown 1s 1;
+    animation: slideDown .3s 1;
+    animation-timing-function: ease-in-out;
 }
 
 .control-bar h1.logo{
@@ -28,8 +29,9 @@ body{
     width: 90%;    
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     animation: fadeUp .5s 1;
-    animation-delay: 1.5s;
+    animation-delay: 1s;
     animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
 }
 
 .section h3{
@@ -60,6 +62,7 @@ body{
     animation-name: fadeIn;
     animation-duration: .5s;
     animation-iteration-count: 1;
+    animation-timing-function: ease-out;
 }
 
 @keyframes fadeIn {
