--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,13 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    padding-bottom: 20vh; /* for logger */
 }
 
 .control-bar{
     position: relative;
     height: 50px;
+    margin-bottom: 50px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     animation: slideDown .3s 1;
     animation-timing-function: ease-in-out;
@@ -24,15 +26,17 @@ body{
 .section {
     opacity: 0;
     position: relative;
-    margin: 30px auto;
-    min-height: 350px;
-    width: 90%;    
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     animation: fadeUp .5s 1;
     animation-delay: 1s;
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
-    background-color: #e1e2e1;
+}
+
+.section h3{
+    font-size: 30px;
+    text-align: center;
+    color: #222222;
+    font-weight: bold;
 }
 
 .character-wrapper {
@@ -46,7 +50,8 @@ body{
 .character-box {
     height: 200px;
     width: 200px;
-    margin-top: 40px;
+    margin: 40px 20px;
+    background-color: #FFFFFF;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     transition: all 0.2s ease-in-out;
 }
@@ -55,18 +60,12 @@ body{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-.section h3{
-    color: #ffffff;
-    padding: 15px;
-    font-weight: bold;
-    background-color: #0d47a1;
-}
 
 #logger {
     background-color: #002171;
     width: 100%;
     height: 20vh;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     font-family: 'Share Tech Mono', monospace;
     overflow-y: hidden;
