--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,10 +26,11 @@ body{
 .section {
     opacity: 0;
     position: relative;
-    animation: fadeUp .5s 1;
+    top: 50px;
+    /*animation: fadeUp .5s 1;
     animation-delay: 1s;
     animation-fill-mode: forwards;
-    animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;*/
 }
 
 .section h3{
@@ -116,5 +117,16 @@ body{
     to {
         top: 0;
         opacity: 1;
+    }
+}
+
+@keyframes fadeDown {
+    from {
+        top: 0;
+        opacity: 1;
+    }
+    to {
+        top: 50px;
+        opacity: 0;
     }
 }
