--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ body{
     animation-duration: .5s;
     animation-iteration-count: 1;
     animation-timing-function: ease-out;
-    animation-delay: 1s;
+    animation-delay: .5s;
     animation-fill-mode: forwards;
     opacity: 0;
 }
