--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ body{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-.character-box p, .enemy-box p {
+.character-box p, .enemy-box p, .combat-box p {
     font-weight: bold;
     text-align: center;
     line-height: 45px;
