--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,10 +77,12 @@ body{
 }
 
 .combat-box {
+    position: relative;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     width: 250px;
     height: 400px;
     opacity: 0;
+    top: 50px;
 }
 
 .combat-box .health-bar {
